// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`build import-umd > dist > app.js 1`] = `"App({globalData:{},onLaunch(){}});"`;

exports[`build import-umd > dist > app.json 1`] = `
"{
  "pages": [
    "pages/index/index",
    "pages/index/vue"
  ],
  "window": {},
  "style": "v2",
  "componentFramework": "glass-easel",
  "sitemapLocation": "sitemap.json"
}"
`;

exports[`build import-umd > dist > app.wxss 1`] = `
".app{color:red}
/*$vite$:1*/"
`;

exports[`build import-umd > dist > components/Navbar/Navbar.js 1`] = `"Component({});"`;

exports[`build import-umd > dist > components/Navbar/Navbar.json 1`] = `
"{
  "component": true,
  "styleIsolation": "apply-shared",
  "usingComponents": {}
}"
`;

exports[`build import-umd > dist > components/Navbar/Navbar.wxml 1`] = `
"<view>Navbar</view>
"
`;

exports[`build import-umd > dist > components/Navbar/Navbar.wxss 1`] = `
".navbar{color:red}
/*$vite$:1*/"
`;

exports[`build import-umd > dist > components/chart/index.json 1`] = `
"{
  "component": true
}"
`;

exports[`build import-umd > dist > components/chart/index.wxml 1`] = `
"<view class="vchart" id="{{ canvasId }}" style="{{ styles }}">
  <canvas
    class="cs-canvas"
    bindtouchstart="bindEvent"
    bindtouchmove="bindEvent"
    bindtouchend="bindEvent"
    bindmousemove="bindEvent"
    bindmouseover="bindEvent"
    bindmouseout="bindEvent"
    bindmousedown="bindEvent"
    bindmouseup="bindEvent"
    id="{{ canvasId }}_draw_canvas"
    canvas-id="{{ canvasId }}_draw_canvas"
    type="2d"
  ></canvas>
  <canvas width="{{ offscreenCanvasWidth }}" height="{{ offscreenCanvasHeight }}" id="{{ canvasId }}_hit_canvas"
    canvas-id="{{ canvasId }}_hit_canvas" class="cs-tooltip-canvas" type="2d"></canvas>
  <canvas width="{{ offscreenCanvasWidth }}" height="{{ offscreenCanvasHeight }}" id="{{ canvasId }}_tooltip_canvas"
    canvas-id="{{ canvasId }}_tooltip_canvas" class="cs-tooltip-canvas" type="2d"></canvas>
</view>
"
`;

exports[`build import-umd > dist > components/chart/index.wxss 1`] = `
".vchart{width:100%;height:100%;position:relative;padding:0!important}.cs-canvas{width:100%;height:100%;margin:0;display:block}.cs-canvas-hidden{opacity:0;visibility:hidden;display:none}.cs-tooltip-canvas{z-index:1;pointer-events:none;width:100%;height:100%;position:absolute;top:0;left:0}
/*$vite$:1*/"
`;

exports[`build import-umd > dist > pages/index/index.js 1`] = `"Page({data:{spec:{},events:[],options:{}},chartType:\`\`,stage:void 0,onLoad(e){this.chartType=e.name||\`\`,this.setData({spec:{type:\`bar\`,data:[{id:\`barData\`,values:[{type:\`Autocracies\`,year:\`1930\`,value:129},{type:\`Autocracies\`,year:\`1940\`,value:133},{type:\`Autocracies\`,year:\`1950\`,value:130},{type:\`Autocracies\`,year:\`1960\`,value:126},{type:\`Autocracies\`,year:\`1970\`,value:117},{type:\`Autocracies\`,year:\`1980\`,value:114},{type:\`Autocracies\`,year:\`1990\`,value:111},{type:\`Autocracies\`,year:\`2000\`,value:89},{type:\`Autocracies\`,year:\`2010\`,value:80},{type:\`Autocracies\`,year:\`2018\`,value:80},{type:\`Democracies\`,year:\`1930\`,value:22},{type:\`Democracies\`,year:\`1940\`,value:13},{type:\`Democracies\`,year:\`1950\`,value:25},{type:\`Democracies\`,year:\`1960\`,value:29},{type:\`Democracies\`,year:\`1970\`,value:38},{type:\`Democracies\`,year:\`1980\`,value:41},{type:\`Democracies\`,year:\`1990\`,value:57},{type:\`Democracies\`,year:\`2000\`,value:87},{type:\`Democracies\`,year:\`2010\`,value:98},{type:\`Democracies\`,year:\`2018\`,value:99}]}],xField:[\`year\`,\`type\`],yField:\`value\`,seriesField:\`type\`,legends:{visible:!0,orient:\`top\`,position:\`start\`},axes:[{orient:\`left\`,label:{formatMethod:e=>\`$\${e}\`}}]}})},onChartInit(e){console.log(\`chart 实例初始化完成\`,e)},onChartReady(e){console.log(\`chart 实例渲染完成\`,e)}});"`;

exports[`build import-umd > dist > pages/index/index.json 1`] = `
"{
  "usingComponents": {
    "Navbar": "/components/Navbar/Navbar",
    "chart": "/components/chart/index"
  },
  "navigationBarTitleText": "初始模板"
}"
`;

exports[`build import-umd > dist > pages/index/index.wxml 1`] = `
"<view>
  <Navbar />
  <chart canvas-id="chart" spec="{{ spec }}" styles="{{ styles }}" events="{{ events }}" bind:chartinit="onChartInit" bind:chartready="onChartReady" />
</view>"
`;

exports[`build import-umd > dist > pages/index/index.wxss 1`] = `
".page{color:red}
/*$vite$:1*/"
`;

exports[`build import-umd > dist > sitemap.json 1`] = `
"{
  "desc": "关于本文件的更多信息，请参考文档 https://developers.weixin.qq.com/miniprogram/dev/framework/sitemap.html",
  "rules": [
    {
      "action": "allow",
      "page": "*"
    }
  ]
}"
`;

exports[`build import-umd > dist > theme.json 1`] = `
"{
  "light": {},
  "dark": {}
}"
`;

exports[`build import-umd > dist 1`] = `
[
  "app.js",
  "app.json",
  "app.wxss",
  "components/Navbar/Navbar.js",
  "components/Navbar/Navbar.json",
  "components/Navbar/Navbar.wxml",
  "components/Navbar/Navbar.wxss",
  "components/chart/index.js",
  "components/chart/index.json",
  "components/chart/index.wxml",
  "components/chart/index.wxss",
  "pages/index/index.js",
  "pages/index/index.json",
  "pages/index/index.wxml",
  "pages/index/index.wxss",
  "sitemap.json",
  "theme.json",
]
`;
